load("@p4c//bazel:p4_library.bzl", "p4_library")
load("@protobuf//bazel:cc_proto_library.bzl", "cc_proto_library")
load("@gutil//gutil:diff_test.bzl", "cmd_diff_test")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("@protobuf//bazel:proto_library.bzl", "proto_library")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

proto_library(
    name = "fuzzer_proto",
    srcs = ["fuzzer.proto"],
    deps = [
        "@p4_infra//p4_pdpi:ir_proto",
        "@p4runtime//proto/p4/v1:p4runtime_proto",
    ],
)

cc_proto_library(
    name = "fuzzer_cc_proto",
    deps = [":fuzzer_proto"],
)

cc_library(
    name = "switch_state",
    srcs = ["switch_state.cc"],
    hdrs = ["switch_state.h"],
    deps = [
        "@p4_infra//p4_pdpi:built_ins",
        "@p4_infra//p4_pdpi:entity_keys",
        "@p4_infra//p4_pdpi:ir",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "@p4_infra//p4_pdpi:translation_options",
        "@gutil//gutil:ordered_map",
        "@p4runtime//proto/p4/config/v1:p4info_cc_proto",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@abseil-cpp//absl/container:btree",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/strings:str_format",
        "@abseil-cpp//absl/types:optional",
        "@abseil-cpp//absl/types:span",
        "@gutil//gutil:collections",
        "@gutil//gutil:proto",
        "@gutil//gutil:status",
        "@protobuf//:protobuf",
    ],
)

cc_test(
    name = "switch_state_test",
    srcs = ["switch_state_test.cc"],
    deps = [
        ":switch_state",
        "@p4_infra//p4_pdpi:ir",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "@p4_infra//p4_pdpi:main_p4_pd_cc_proto",
        "@p4_infra//p4_pdpi:pd",
        "@p4_infra//p4_pdpi:test_p4info_cc",
        "@p4runtime//proto/p4/config/v1:p4info_cc_proto",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/types:span",
        "@googletest//:gtest_main",
        "@gutil//gutil:collections",
        "@gutil//gutil:proto_matchers",
        "@gutil//gutil:status",
        "@gutil//gutil:status_matchers",
        "@gutil//gutil:testing",
    ],
)

cc_library(
    name = "fuzzer_config",
    srcs = [
        "fuzzer_config.cc",
    ],
    hdrs = [
        "fuzzer_config.h",
    ],
    deps = [
        ":fuzzer_cc_proto",
        ":switch_state",
        "//lib/p4rt:p4rt_port",
        "@p4_infra//p4_pdpi:ir",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "@p4_infra//p4_pdpi:ir_properties",
        "@p4_infra//p4_pdpi:reference_annotations",
        "@p4_constraints//p4_constraints:ast",
        "@p4_constraints//p4_constraints/backend:constraint_info",
        "@p4runtime//proto/p4/config/v1:p4info_cc_proto",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@abseil-cpp//absl/container:btree",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@gutil//gutil:proto",
        "@gutil//gutil:status",
        "@protobuf//:protobuf",
    ],
)

cc_test(
    name = "fuzzer_config_test",
    srcs = ["fuzzer_config_test.cc"],
    deps = [
        ":fuzzer_config",
        "@p4_infra//p4_pdpi:ir",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "@p4runtime//proto/p4/config/v1:p4info_cc_proto",
        "@abseil-cpp//absl/status",
        "@googletest//:gtest_main",
        "@gutil//gutil:status_matchers",
        "@gutil//gutil:testing",
    ],
)

cc_library(
    name = "mutation_and_fuzz_util",
    srcs = [
        "constraints.cc",
        "fuzz_util.cc",
        "mutation.cc",
    ],
    hdrs = [
        "constraints.h",
        "fuzz_util.h",
        "mutation.h",
    ],
    deps = [
        ":annotation_util",
        ":fuzzer_cc_proto",
        ":fuzzer_config",
        ":switch_state",
        "//lib/p4rt:p4rt_port",
        "@p4_infra//netaddr:ipv6_address",
        "@p4_infra//p4_pdpi:built_ins",
        "@p4_infra//p4_pdpi:entity_keys",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "@p4_infra//p4_pdpi:ir_properties",
        "@p4_infra//p4_pdpi:ir_utils",
        "@p4_infra//p4_pdpi:references",
        "@p4_infra//string_encodings:byte_string",
        "@p4_constraints//p4_constraints:ast",
        "@p4_constraints//p4_constraints:ast_cc_proto",
        "@p4_constraints//p4_constraints:constraint_source",
        "@p4_constraints//p4_constraints/backend:constraint_info",
        "@p4_constraints//p4_constraints/backend:symbolic_interpreter",
        "@p4_constraints//p4_constraints/frontend:constraint_kind",
        "@p4_constraints//p4_constraints/frontend:parser",
        "@p4runtime//proto/p4/config/v1:p4info_cc_proto",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@p4runtime//proto/p4/config/v1:p4types_cc_proto",
        "@abseil-cpp//absl/algorithm:container",
        "@abseil-cpp//absl/base",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/random",
        "@abseil-cpp//absl/random:distributions",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/types:optional",
        "@abseil-cpp//absl/types:span",
        "@gutil//gutil:collections",
        "@gutil//gutil:proto",
        "@gutil//gutil:status",
        "@protobuf//:protobuf",
    ],
)

cc_test(
    name = "fuzz_util_test",
    size = "large",
    timeout = "long",
    srcs = [
        "fuzz_util_test.cc",
    ],
    data = ["acl_table_test.p4info.pb.txt"],
    shard_count = 10,
    deps = [
        ":fuzzer_cc_proto",
        ":fuzzer_config",
        ":mutation_and_fuzz_util",
        ":switch_state",
        ":test_utils",
        "@p4_infra//p4_pdpi:built_ins",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "@p4_infra//p4_pdpi:test_p4info_cc",
        "@p4runtime//proto/p4/config/v1:p4info_cc_proto",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@abseil-cpp//absl/algorithm:container",
        "@abseil-cpp//absl/container:flat_hash_set",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/random",
        "@abseil-cpp//absl/random:distributions",
        "@abseil-cpp//absl/random:seed_sequences",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest_main",
        "@gutil//gutil:collections",
        "@gutil//gutil:proto_matchers",
        "@gutil//gutil:status_matchers",
        "@gutil//gutil:testing",
    ],
)

cc_library(
    name = "annotation_util",
    srcs = ["annotation_util.cc"],
    hdrs = ["annotation_util.h"],
    deps = [
        ":fuzzer_cc_proto",
        "@p4_infra//p4_pdpi:ir",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "@p4_infra//p4_pdpi:ir_utils",
        "//thinkit:test_environment",
        "@p4runtime//proto/p4/config/v1:p4info_cc_proto",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/log:check",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@gutil//gutil:status",
    ],
)

cc_library(
    name = "oracle_util",
    srcs = [
        "oracle_util.cc",
    ],
    hdrs = ["oracle_util.h"],
    deps = [
        ":fuzzer_cc_proto",
        ":switch_state",
        "@p4_infra//p4_pdpi:entity_keys",
        "@p4_infra//p4_pdpi:ir",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "@p4runtime//proto/p4/config/v1:p4info_cc_proto",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@abseil-cpp//absl/algorithm:container",
        "@abseil-cpp//absl/container:flat_hash_map",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/types:optional",
        "@abseil-cpp//absl/types:span",
        "@gutil//gutil:status",
    ],
)

cc_test(
    name = "oracle_util_test",
    srcs = ["oracle_util_test.cc"],
    deps = [
        ":fuzzer_cc_proto",
        ":mutation_and_fuzz_util",
        ":oracle_util",
        ":switch_state",
        ":test_utils",
        "@p4_infra//netaddr:ipv4_address",
        "@p4_infra//p4_pdpi:ir",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "//sai_p4/instantiations/google:instantiations",
        "//sai_p4/instantiations/google:sai_p4info_cc",
        "//sai_p4/instantiations/google:sai_pd_cc_proto",
        "@p4runtime//proto/p4/config/v1:p4info_cc_proto",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@googleapis//google/rpc:code_cc_proto",
        "@googletest//:gtest_main",
        "@gutil//gutil:status",
        "@gutil//gutil:status_matchers",
        "@gutil//gutil:testing",
    ],
)

cc_library(
    name = "test_utils",
    testonly = True,
    srcs = ["test_utils.cc"],
    hdrs = ["test_utils.h"],
    deps = [
        ":fuzzer_config",
        ":switch_state",
        "//lib/p4rt:p4rt_port",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "@p4_infra//p4_pdpi:test_p4info_cc",
        "@gutil//gutil:ordered_map",
        "//sai_p4/instantiations/google:sai_p4info_cc",
        "@p4runtime//proto/p4/config/v1:p4info_cc_proto",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@abseil-cpp//absl/random",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
    ],
)

cc_test(
    name = "constraints_test",
    srcs = ["constraints_test.cc"],
    deps = [
        ":fuzzer_config",
        ":mutation_and_fuzz_util",
        ":switch_state",
        ":test_utils",
        "@p4_infra//p4_pdpi:ir",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "@p4_constraints//p4_constraints:ast_cc_proto",
        "@p4_constraints//p4_constraints/backend:constraint_info",
        "@p4_constraints//p4_constraints/backend:interpreter",
        "@p4runtime//proto/p4/config/v1:p4info_cc_proto",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@abseil-cpp//absl/log",
        "@abseil-cpp//absl/random",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/strings",
        "@googletest//:gtest_main",
        "@gutil//gutil:collections",
        "@gutil//gutil:status",
        "@gutil//gutil:status_matchers",
        "@gutil//gutil:testing",
    ],
)

# -- P4 libraries for testing -------------------------------------------------

p4_library(
    name = "single_table_single_entry",
    src = "p4_programs/single_table_single_entry.p4",
    p4info_out = "single_table_single_entry.p4info.pb.txt",
)

p4_library(
    name = "constraints_equals",
    src = "p4_programs/constraints_equals.p4",
    p4info_out = "constraints_equals.p4info.pb.txt",
)

p4_library(
    name = "constraints_not_equals",
    src = "p4_programs/constraints_not_equals.p4",
    p4info_out = "constraints_not_equals.p4info.pb.txt",
)

p4_library(
    name = "acl_table_test",
    src = "p4_programs/acl_table_test.p4",
    p4info_out = "acl_table_test.p4info.pb.txt",
    deps = [
        "p4_programs/sai-p4-google/acl_actions.p4",
        "p4_programs/sai-p4-google/acl_set_vrf.p4",
        "p4_programs/sai-p4-google/headers.p4",
        "p4_programs/sai-p4-google/ids.h",
        "p4_programs/sai-p4-google/metadata.p4",
        "p4_programs/sai-p4-google/resource_limits.p4",
    ],
)

p4_library(
    name = "sai_main",
    src = "p4_programs/sai-p4-google/sai_main.p4",
    p4info_out = "sai_main_info.pb.txt",
    deps = glob(["p4_programs/sai-p4-google/*"]),
)

cc_library(
    name = "acl_table_test_ids",
    hdrs = ["p4_programs/sai-p4-google/ids.h"],
)

# go/golden-test-with-coverage
cc_test(
    name = "switch_state_assert_entry_equality_test_runner",
    srcs = ["switch_state_assert_entry_equality_test_runner.cc"],
    linkstatic = True,
    deps = [
        ":switch_state",
        "@p4_infra//p4_pdpi:ir",
        "@p4_infra//p4_pdpi:ir_cc_proto",
        "@p4_infra//p4_pdpi:test_p4info_cc",
        "@p4runtime//proto/p4/config/v1:p4info_cc_proto",
        "@p4runtime//proto/p4/v1:p4runtime_cc_proto",
        "@abseil-cpp//absl/status",
        "@abseil-cpp//absl/status:statusor",
        "@abseil-cpp//absl/strings",
        "@abseil-cpp//absl/types:span",
        "@gutil//gutil:collections",
        "@gutil//gutil:proto",
        "@gutil//gutil:status",
        "@gutil//gutil:testing",
        "@protobuf//:protobuf",
    ],
)

cmd_diff_test(
    name = "switch_state_assert_entry_equality_test",
    actual_cmd = "$(execpath :switch_state_assert_entry_equality_test_runner)",
    expected = ":switch_state_assert_entry_equality_test.expected.output",
    tools = [":switch_state_assert_entry_equality_test_runner"],
)
